<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpPage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="107dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottomimage" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201"
        app:srcCompat="@drawable/signuppagetex" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="163dp"
        android:layout_height="123dp"

        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/topimage" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:background="@drawable/inputtext"
        android:backgroundTint="@null"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/emailid"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/inputtext"
        android:backgroundTint="@null"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/phoneno"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/inputtext"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/retypepassword"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/signuppagesignupbutton"
        android:layout_width="252dp"
        android:layout_height="57dp"
        android:background="@drawable/signupbutton1"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <TextView
        android:id="@+id/alrHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="ALREADY HAVE AN ACCOUNT?"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:id="@+id/signInClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"

        android:text="@string/signin"
        android:textColor="#1B6B93"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <Spinner
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="#0F89E5"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.125" />


</androidx.constraintlayout.widget.ConstraintLayout>