<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomePage">

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/activity_home_page"
        android:layout_width="411dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />


<!--    <com.google.android.gms.maps.MapView-->
<!--        android:id="@+id/mapView2"-->
<!--        android:layout_width="411dp"-->
<!--        android:layout_height="500dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.163" />-->

    <SearchView
        android:id="@+id/mapView2"
        android:layout_width="407dp"
        android:layout_height="64dp"
        android:background="#2798F1"
        android:paddingStart="15dp"
        android:queryHint="Pick Drop Location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:text="@string/apply_ride_filters"
        android:textColor="@color/black"
        android:thumbTint="#2798F1"
        android:trackTint="#0020F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/check_in"
        android:textColor="@color/black"
        android:thumbTint="#2798F1"
        android:trackTint="#0020F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mapView2"
        app:layout_constraintVertical_bias="0.788" />


    <Switch
        android:id="@+id/switch3"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/track_my_ride"
        android:textColor="@color/black"
        android:thumbTint="#2798F1"
        android:trackTint="#0020F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mapView2"
        app:layout_constraintVertical_bias="0.788" />


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@drawable/group" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/mapView2"
        app:layout_constraintVertical_bias="0.979"
        app:srcCompat="@drawable/settings" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@drawable/group28please" />

    <ImageButton
        android:id="@+id/bookRideBtn"
        android:layout_width="189dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView2"
        app:layout_constraintVertical_bias="0.872"
        app:srcCompat="@drawable/confirmriidebutton" />

</androidx.constraintlayout.widget.ConstraintLayout>